[Mod] Add output for rouge in Lab6_Summarization.ipynb

--- a/Lab6_Summarization/Lab6_Summarization.ipynb
+++ b/Lab6_Summarization/Lab6_Summarization.ipynb
@@ -350,13 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rouge import Rouge \n",
     "\n",
-    "def rouge_df(row):\n",
+    "def rouge_fill_df(row):\n",
     "    hypothesis = row['summary_text']\n",
     "    reference = row['ref_text']\n",
     "    rouge = Rouge()\n",
@@ -543,11 +543,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>orig_word_count</th>\n",
+       "      <th>clean_text</th>\n",
+       "      <th>summary_text</th>\n",
+       "      <th>sum_word_count</th>\n",
+       "      <th>ref_text</th>\n",
+       "      <th>rouge 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Увидеть мысль\\n\\nЯпонским ученым удалось распо...</td>\n",
+       "      <td>155</td>\n",
+       "      <td>увидеть мысль японским ученым удалось распозна...</td>\n",
+       "      <td>как пишет yomiuri , группе сотрудников отделен...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>группе учённых удалось восстановить изображени...</td>\n",
+       "      <td>{'f': 0.3291139192308925, 'p': 0.40625, 'r': 0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Карбофос\\n\\nКарбофос ( O , O - Диметил - S - (...</td>\n",
+       "      <td>131</td>\n",
+       "      <td>карбофос карбофос ( o , o - диметил - s - ( 1,...</td>\n",
+       "      <td>в настоящее время вытеснен более совершенными ...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Карбофос — фосфорорганическое соединение , инс...</td>\n",
+       "      <td>{'f': 0.24999999760802472, 'p': 0.9, 'r': 0.14...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Киев идет на уступки : Яценюк передает власть ...</td>\n",
+       "      <td>282</td>\n",
+       "      <td>киев идет на уступки : яценюк передает власть ...</td>\n",
+       "      <td>киев идет на уступки : яценюк передает власть ...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Исполняющий обязанности главы кабинета министр...</td>\n",
+       "      <td>{'f': 0.16326530249433113, 'p': 0.342857142857...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>« Лужков . Итоги »\\nКонец эры хозяйственника и...</td>\n",
+       "      <td>2772</td>\n",
+       "      <td>« лужков . итоги » конец эры хозяйственника ил...</td>\n",
+       "      <td>пока борис немцов подсчитывал разницу между ст...</td>\n",
+       "      <td>279</td>\n",
+       "      <td>Опубликованный доклад Бориса Немцова « Лужков ...</td>\n",
+       "      <td>{'f': 0.029411761435986523, 'p': 0.01851851851...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>... в ходе написания ходатайства : сделать его...</td>\n",
+       "      <td>323</td>\n",
+       "      <td>... в ходе написания ходатайства : сделать его...</td>\n",
+       "      <td>закончим , как и положено : &amp;quot; на основани...</td>\n",
+       "      <td>110</td>\n",
+       "      <td>в ходе написания ходатайства : сделать его по ...</td>\n",
+       "      <td>{'f': 0.14814814318287056, 'p': 0.161616161616...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0  orig_word_count  \\\n",
+       "0  Увидеть мысль\\n\\nЯпонским ученым удалось распо...              155   \n",
+       "1  Карбофос\\n\\nКарбофос ( O , O - Диметил - S - (...              131   \n",
+       "2  Киев идет на уступки : Яценюк передает власть ...              282   \n",
+       "3  « Лужков . Итоги »\\nКонец эры хозяйственника и...             2772   \n",
+       "4  ... в ходе написания ходатайства : сделать его...              323   \n",
+       "\n",
+       "                                          clean_text  \\\n",
+       "0  увидеть мысль японским ученым удалось распозна...   \n",
+       "1  карбофос карбофос ( o , o - диметил - s - ( 1,...   \n",
+       "2  киев идет на уступки : яценюк передает власть ...   \n",
+       "3  « лужков . итоги » конец эры хозяйственника ил...   \n",
+       "4  ... в ходе написания ходатайства : сделать его...   \n",
+       "\n",
+       "                                        summary_text  sum_word_count  \\\n",
+       "0  как пишет yomiuri , группе сотрудников отделен...              34   \n",
+       "1  в настоящее время вытеснен более совершенными ...              12   \n",
+       "2  киев идет на уступки : яценюк передает власть ...              38   \n",
+       "3  пока борис немцов подсчитывал разницу между ст...             279   \n",
+       "4  закончим , как и положено : &quot; на основани...             110   \n",
+       "\n",
+       "                                            ref_text  \\\n",
+       "0  группе учённых удалось восстановить изображени...   \n",
+       "1  Карбофос — фосфорорганическое соединение , инс...   \n",
+       "2  Исполняющий обязанности главы кабинета министр...   \n",
+       "3  Опубликованный доклад Бориса Немцова « Лужков ...   \n",
+       "4  в ходе написания ходатайства : сделать его по ...   \n",
+       "\n",
+       "                                             rouge 2  \n",
+       "0  {'f': 0.3291139192308925, 'p': 0.40625, 'r': 0...  \n",
+       "1  {'f': 0.24999999760802472, 'p': 0.9, 'r': 0.14...  \n",
+       "2  {'f': 0.16326530249433113, 'p': 0.342857142857...  \n",
+       "3  {'f': 0.029411761435986523, 'p': 0.01851851851...  \n",
+       "4  {'f': 0.14814814318287056, 'p': 0.161616161616...  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_jsexample['sum_word_count'] = df_jsexample.apply(lambda row: summary_word_count_df(row), axis=1)"
+    "df_jsexample['rouge 2'] = df_jsexample.apply(lambda row: rouge_fill_df(row), axis=1)\n",
+    "df_jsexample"
    ]
   },
   {
