[Mod] Add to Lab6_Summarization solution description.

--- a/Lab6_Summarization/Lab6_Summarization.ipynb
+++ b/Lab6_Summarization/Lab6_Summarization.ipynb
@@ -25,7 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution description:\n"
+    "Solution description:\n",
+    "\n",
+    "For task of making abstract i had used gensim.summarization module. Of course, after cleaning the data. \n",
+    "\n",
+    "For measuring ROUGE-2 metrics task i had used solution from this repository https://github.com/pltrdy/rouge/tree/master/.\n",
+    "The result gives us 3 type of measure scores for ROUGE-2 metrics: F-value, P-value and R-squared."
    ]
   },
   {
