[Mod] Mod Lab7_Summarization_Metrics Changed overlap counter for hyperonyms.

--- a/Lab7_Summarization_Metrics/Lab7_clean_HypernymTitles.ipynb
+++ b/Lab7_Summarization_Metrics/Lab7_clean_HypernymTitles.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "res = {}\n",
-    "for title in titles[:20]:\n",
+    "for title in titles[:10]:\n",
     "    synsets = {}\n",
     "    for word in title:\n",
     "        synsets[word]=[synset for synset in wn.synsets(word)]\n",
@@ -74,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# output is dictionary of hyperonyms_by_level (1 or 2)\n",
     "def get_2parent_classes(synset):\n",
     "    hyps = dict()\n",
     "    level_count = 1\n",
@@ -187,10 +188,10 @@
     "    #            overlap_hyp_cnt += 1\n",
     "    \n",
     "    if len(buff_a_first.intersection(buff_b_first)) > 0:\n",
-    "        overlap_hyp_cnt += 1\n",
+    "        overlap_hyp_cnt += 1 * len(buff_a_first.intersection(buff_b_first))\n",
     "    \n",
     "    if len(buff_a_second.intersection(buff_b_second)) > 0:\n",
-    "        overlap_hyp_cnt += 0.5\n",
+    "        overlap_hyp_cnt += 0.5 * len(buff_a_second.intersection(buff_b_second))\n",
     "    \n",
     "    \n",
     "    \n",
@@ -221,84 +222,24 @@
      "data": {
       "text/plain": [
        "array([[0.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 0.51851852, 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
+       "        1.        , 1.        , 1.        , 0.51851852, 1.        ],\n",
        "       [1.        , 0.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.80952381, 1.        , 1.        , 1.        ,\n",
        "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
        "       [1.        , 1.        , 0.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 0.62962963,\n",
        "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
        "       [1.        , 1.        , 1.        , 0.        , 0.75757576,\n",
-       "        1.        , 1.        , 0.85964912, 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
+       "        1.        , 1.        , 0.85964912, 1.        , 1.        ],\n",
        "       [1.        , 1.        , 1.        , 0.75757576, 0.        ,\n",
-       "        1.        , 1.        , 0.87878788, 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
+       "        1.        , 1.        , 0.87878788, 1.        , 1.        ],\n",
        "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        0.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.        , 0.54545455, 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 0.85964912, 0.87878788,\n",
-       "        1.        , 0.78787879, 0.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 0.76106934, 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [0.81481481, 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 0.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 0.78947368, 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 0.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        0.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.81818182, 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 0.80952381, 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.        , 1.        , 1.        , 1.        ,\n",
-       "        0.71428571, 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 0.44527987, 1.        , 1.        ,\n",
-       "        1.        , 1.        , 0.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 0.54385965, 1.        ,\n",
-       "        1.        , 1.        , 1.        , 0.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 0.7037037 , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 0.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.61904762, 1.        , 1.        , 1.        ,\n",
        "        0.        , 1.        , 1.        , 1.        , 1.        ],\n",
        "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        0.81818182, 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 0.        , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 0.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
+       "        1.        , 0.        , 0.54545455, 1.        , 1.        ],\n",
+       "       [1.        , 1.        , 1.        , 0.85964912, 0.87878788,\n",
+       "        1.        , 0.78787879, 0.        , 1.        , 1.        ],\n",
+       "       [0.81481481, 1.        , 1.        , 1.        , 1.        ,\n",
        "        1.        , 1.        , 1.        , 0.        , 1.        ],\n",
        "       [1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
-       "        1.        , 1.        , 1.        , 1.        , 1.        ,\n",
        "        1.        , 1.        , 1.        , 1.        , 0.        ]])"
       ]
      },
@@ -326,12 +267,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e66336fc4da342a0ad064855198728e3",
+       "model_id": "0cfa361e744c4310a84bf77808020333",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='ind', max=19), Output()), _dom_classes=('widget-interact…"
+       "interactive(children=(IntSlider(value=0, description='ind', max=9), Output()), _dom_classes=('widget-interact'…"
       ]
      },
      "metadata": {},
@@ -354,12 +295,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dafff0642db406f9379517fd7beb902",
+       "model_id": "f4069c00dbed4a53a97d9ef5e339a218",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='ind', max=19), Output()), _dom_classes=('widget-interact…"
+       "interactive(children=(IntSlider(value=0, description='ind', max=9), Output()), _dom_classes=('widget-interact'…"
       ]
      },
      "metadata": {},
